# streamlit_demo

./: data.csv  main.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: datagen.py  frozen_yogurt_sales.csv  frozen_yogurt_sales_1.csv
pages/: monte.py  montecarlo.py  salesdata.py
