[project]
name = "streamlit-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "matplotlib>=3.10.1",
  "mypy>=1.15",
  "plotly>=6.0.1",
  "pre-commit>=4.2",
  "seaborn>=0.13.2",
  "streamlit>=1.44.1",
]
